# MunchMan

./: .gitignore  README.md
Level_1_Spinny/: .gitignore  README.md  find.py  manifest.py  manifest.txt  pick.py
Level_2_Ducky/: Makefile  README.md  hash_op.v  ice_Makefile.mk  md5core.v  pll_72mhz.v  pll_96mhz.v  top_loopback.gtkw  top_loopback.pcf  top_loopback.proj  top_loopback.v  top_loopback.vf  top_loopback_tb.v
Level_2_Ducky/loopback/: ice_Makefile.mk  sim_Makefile.mk  top_loopback.gtkw  top_loopback.v  top_loopback.vf  top_loopback_tb.v
Level_2_Ducky/md5/: hash_op.gtkw  hash_op.v  hash_op.vf  hash_op_tb.v  md5core.gtkw  md5core.v  md5core.vf  md5core_tb.v  sim_Makefile.mk
Level_2_Ducky/md5_impl/: README.md  cmd_parser.v  string_process_match.v  top_md5.v
Level_2_Ducky/md5_impl/images/: .gitignore
Level_2_Ducky/md5_impl/sim/: README.md  sim_top.gtkw  sim_top.vf  sim_top_tb.v
Level_2_Ducky/md5_sim/: hash_op.vf  hash_op_tb.v  md5core_tb.v
Level_2_Ducky/pll_test/: README.md  ice_Makefile.mk  top_pll_test.pcf
Level_2_Ducky/sw/: CMakeLists.txt  find.c  ftdi_test.c  ice_cat.c  kbinput.c  md5.c  md5.h  md5_tb.c  md5_test.c  munchman.c  munchman.h  simple.c
Level_3_MiniWheat/: README.md
Level_3_MiniWheat/sw/: Makefile  data_test.c  find.c  md5_tb.c  munchman.c  munchman.h  test_toggle.c
Level_4_Blinky/: README.md
Level_4_Blinky/sw/: Makefile  data_test.c  find.c  find_lib.c  find_lib.h  ifind.c  kbinput.c  md5_tb.c  munchman.c  munchman.h  munchman16.c  munchman16.h  munchman8.c  sdcard.c
Level_5_Owl/: README.md
Level_5_Owl/exported_hw/: design_1_wrapper.hdf
Level_5_Owl/fpga/: settings64.sh
Level_5_Owl/fpga/artyZ7/: README.md
Level_5_Owl/sdk_appsrc/: .gitignore  README.md
Level_5_Owl/sdk_appsrc/dma_test/: .cproject
Level_5_Owl/sdk_appsrc/dma_test_bsp/: .cproject
Level_5_Owl/sdk_appsrc/dma_test_int/: .cproject
Level_5_Owl/sw/: Makefile  find.c  ifind.c  kbinput.c  kbinput.h  md5_tb16.c  munchman8.c  munchman8.h
(+268 files in other folders)
